fixed-urls-images

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <li class="menu-item"><a href="#" class="menu-link">Заказать</a></li>
                 </ul>
                 <div class="logo-menu">
-                    <img src="img/Group.svg" alt="Тут должна быть картинка">
+                    <img src="./img/Group.svg" alt="Тут должна быть картинка">
                 </div>
             </div>
             <div class="logo">
-                <img src="img/Group.svg" alt="Тут должна быть картинка">
+                <img src="./img/Group.svg" alt="Тут должна быть картинка">
             </div>
             <div class="phone-number">
                 <a href="tel:" class="telephone-link">+38 050-456-56-56</a>
@@ -37,7 +37,7 @@
         <div class="header-container container">
             <h1>IPHONE 14 PRO</h1>
             <div class="img-phone">
-                <img src="img/iphone_14_pro_finish_unselect_gallery_1_202209_GEO_US_removebg.png"
+                <img src="./img/iphone_14_pro_finish_unselect_gallery_1_202209_GEO_US_removebg.png"
                     alt="Тут должна быть картинка">
                 <a href="#" class="button-header">Выбрать</a>
             </div>
@@ -71,7 +71,7 @@
                             Bionic, который может за секунду производить 4 трлн операций с фото.</p>
                     </div>
                     <div class="image-iphone14">
-                        <img src="img/Apple-iPhone-14-Pro-Max 1.jpg" alt="Тут должна быть картинка">
+                        <img src="./img/Apple-iPhone-14-Pro-Max 1.jpg" alt="Тут должна быть картинка">
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="images-choose-iphone">
                     <div class="iphones-choose">
-                        <a href="#" class="a-img-iphone"><img src="img/silver 1.jpg" alt="Тут должна быть картинка"
+                        <a href="#" class="a-img-iphone"><img src="./img/silver 1.jpg" alt="Тут должна быть картинка"
                                 class="img-iphone"></a>
                         <div class="information-about-iphone">
                             <p class="p-20px">Silver</p>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="iphones-choose">
-                        <a href="#" class="a-img-iphone"><img src="img/purple.jpg" alt="Тут должна быть картинка"
+                        <a href="#" class="a-img-iphone"><img src="./img/purple.jpg" alt="Тут должна быть картинка"
                                 class="img-iphone"></a>
                         <div class="information-about-iphone">
                             <p class="p-20px">Deep purple</p>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="iphones-choose">
-                        <a href="#" class="a-img-iphone"><img src="img/gold.jpg" alt="Тут должна быть картинка"
+                        <a href="#" class="a-img-iphone"><img src="./img/gold.jpg" alt="Тут должна быть картинка"
                                 class="img-iphone"></a>
                         <div class="information-about-iphone">
                             <p class="p-20px">Gold</p>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="iphones-choose">
-                        <a href="#" class="a-img-iphone"><img src="img/black.jpg" alt="Тут должна быть картинка"
+                        <a href="#" class="a-img-iphone"><img src="./img/black.jpg" alt="Тут должна быть картинка"
                                 class="img-iphone"></a>
                         <div class="information-about-iphone">
                             <p class="p-20px">Space Black</p>
@@ -142,7 +142,7 @@
 
             </div>
             <div class="img-footer">
-                <img src="/img/hero_endframe__cvklg0xk3w6e_large 1.jpg" alt="Тут должна быть картинка">
+                <img src="./img/hero_endframe__cvklg0xk3w6e_large 1.jpg" alt="Тут должна быть картинка">
             </div>
         </div>
         <div class="black">
@@ -152,7 +152,7 @@
                         конфиденциальности</a>
                 </div>
                 <div class="logo-end">
-                    <img src="/img/Group.svg" alt="Тут должна быть картинка">
+                    <img src="./img/Group.svg" alt="Тут должна быть картинка">
                 </div>
                 <div class="phone-number-end">
                     <a href="tel:" class="telephone-link">+38 050-456-56-56</a>
@@ -161,7 +161,7 @@
         </div>
 
     </footer>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
